--- a/public/debug.html
+++ b/public/debug.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-  <!-- <div id="view-change-button" class="button" onclick="PayloadPanel.togglePanel(event, this)">
+  <div id="view-change-button" class="button" onclick="PayloadPanel.togglePanel(event, this)">
     <img class="option full" src="../img/Chat Button.png">
     <img class="option not-full" src="../img/Code Button.png">
-  </div> -->
+  </div>
   <div id="contentParent" class="responsive-columns-wrapper">
     <div id="chat-column-holder" class="responsive-column content-column">
       <div class="chat-column">
@@ -25,28 +25,28 @@
           <input id="textInput" class="input responsive-column" placeholder="Type something" type="text" onkeydown="ConversationPanel.inputKeyDown(event, this)"
             autofocus>
         </label>
-        <!-- <div class="disclaimer">
+        <div class="disclaimer">
           * This system is for demonstration purposes only and is not intended to process Personal Data. No Personal
           Data is to be entered
           into this system as it may not have the necessary controls in place to meet the requirements of the General
           Data Protection
           Regulation (EU) 2016/679.
-        </div> -->
+        </div>
       </div>
     </div>
-    <!-- <div id="payload-column" class="fixed-column content-column">
+    <div id="payload-column" class="fixed-column content-column">
       <div id="payload-initial-message">
         Type something to see the output
       </div>
       <div id="payload-request" class="payload"></div>
       <div id="payload-response" class="payload"></div>
-    </div> -->
+    </div>
   </div>
 
   <script src="js/common.js"></script>
   <script src="js/api.js"></script>
   <script src="js/conversation.js"></script>
-  <!-- <script src="js/payload.js"></script> -->
+  <script src="js/payload.js"></script>
   <script src="js/global.js"></script>
   <script type="text/javascript" src="https://cdn.rawgit.com/watson-developer-cloud/watson-developer-cloud.github.io/master/analytics.js"></script>
 </body>
