--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   </div> -->
   <div id="contentParent" class="responsive-columns-wrapper">
     <div id="chat-column-holder" class="responsive-column content-column">
+      <img src="img/logo.png">
       <div class="chat-column">
         <div id="scrollingChat"></div>
         <p class="user-typing" id="user-typing-field"></p>
