--- a/public/debug.html
+++ b/public/debug.html
@@ -18,6 +18,7 @@
   </div>
   <div id="contentParent" class="responsive-columns-wrapper">
     <div id="chat-column-holder" class="responsive-column content-column">
+      <img src="img/logo.png">
       <div class="chat-column">
         <div id="scrollingChat"></div>
         <p class="user-typing" id="user-typing-field"></p>
@@ -25,13 +26,13 @@
           <input id="textInput" class="input responsive-column" placeholder="Type something" type="text" onkeydown="ConversationPanel.inputKeyDown(event, this)"
             autofocus>
         </label>
-        <div class="disclaimer">
+        <!-- <div class="disclaimer">
           * This system is for demonstration purposes only and is not intended to process Personal Data. No Personal
           Data is to be entered
           into this system as it may not have the necessary controls in place to meet the requirements of the General
           Data Protection
           Regulation (EU) 2016/679.
-        </div>
+        </div> -->
       </div>
     </div>
     <div id="payload-column" class="fixed-column content-column">
